--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
     <div class="controls">
-
+        CONTROLS
     </div>
     <div class="render">
-
+        RENDER
     </div>
     <div class="info">
-
+        INFO
     </div>
     
 </body>
