--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </div>
     <div class="info">
-        <div class="primeFrame">
+        <div id="primeFrame">
             prime frame
         </div>
         <div class="links">
