--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
     </div>
     <div class="render">
         <div id="field">
-            field
+            <div class="grid">
+                <div class="spot"></div>
+                <div class="spot full"></div>
+            </div>
         </div>
         <div class="edit">
             <div>
