changeable dimensions and randomize button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </span>
                 </div>
                 <div class="input">
-                    <input type="number" min="2" value="2">
+                    <input class="xInput" type="number" min="2" value="2">
                 </div>
             </div>
             <div class="axis">
@@ -43,7 +43,7 @@
                     </span>
                 </div>
                 <div class="input">
-                    <input type="number" min="2" value="2">
+                    <input class="yInput" type="number" min="2" value="2">
                 </div>
             </div>
         </div>
@@ -58,12 +58,9 @@
     </div>
     <div class="render">
         <div id="field">
-            <div class="grid">
-                <div class="spot"></div>
-                <div class="spot full"></div>
-            </div>
+            <!-- JS generated grid -->
         </div>
-        <div class="edit">
+        <div id="edit">
             <div>
                 <button type="button" class="manual"> MANUAL </button>
             </div>
