--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div id="edit">
             <div>
-                <button type="button" class="manual"> MANUAL </button>
+                <button type="button" class="reset"> RESET </button>
             </div>
             <div>
                 <button type="button" class="random"> RANDOM </button>
